# obsidian-webindex-scrapers

./: README.md  main.py  pyproject.toml
medium_scraper/: pw_medium.py
